--- a/src/tools/styleguide/StyleGuide/StyleGuide.css
+++ b/src/tools/styleguide/StyleGuide/StyleGuide.css
@@ -7,9 +7,6 @@ $sidebarWidth: 256px;
 	padding-top: 64px;
 
 	&_HasSidebar {
-		display: flex;
-		flex-direction: column;
-
 		@media (min-width: 800px) {
 			padding-left: $sidebarWidth;
 		}
@@ -52,7 +49,7 @@ $sidebarWidth: 256px;
 
 .components {
 	overflow: auto; /* to prevent the pane from growing out of the screen */
-	padding: 0.5rem;
+	padding: 0.5rem 1rem;
 }
 
 .heading {
@@ -65,6 +62,8 @@ $sidebarWidth: 256px;
 	padding: 0.5rem 15px;
 	color: white;
 	background-color: rgb(0, 188, 212);
+	position: relative;
+	z-index: 1;
 }
 
 .doc {
